# openapi/bundled/college-agent.json
@@ -732,20 +732,14 @@
                 "properties": {
                   "objectType": {
                     "type": "string",
-                    "enum": [
-                      "discipline",
-                      "practiceKind"
-                    ]
+                    "enum": ["discipline", "practiceKind"]
                   },
                   "objectId": {
                     "type": "string",
                     "format": "uuid"
                   }
                 },
-                "required": [
-                  "objectType",
-                  "objectId"
-                ]
+                "required": ["objectType", "objectId"]
               },
               {
                 "type": "null"
@@ -834,12 +828,7 @@
             }
           }
         },
-        "required": [
-          "id",
-          "scheduleDate",
-          "periodScheduleId",
-          "schedule"
-        ]
+        "required": ["id", "scheduleDate", "periodScheduleId", "schedule"]
       },
       "ReferenceNotFound": {
         "type": "object",
@@ -856,11 +845,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "code",
-          "message",
-          "referenceType"
-        ]
+        "required": ["code", "message", "referenceType"]
       },
       "ScheduleForDate_ByScheduleDate": {
         "type": "object",
@@ -892,12 +877,7 @@
             }
           }
         },
-        "required": [
-          "id",
-          "scheduleDate",
-          "periodScheduleId",
-          "schedule"
-        ]
+        "required": ["id", "scheduleDate", "periodScheduleId", "schedule"]
       },
       "NotFound": {
         "type": "object",
@@ -911,10 +891,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "code",
-          "message"
-        ]
+        "required": ["code", "message"]
       },
       "PeriodsSchedule": {
         "type": "object",
@@ -965,19 +942,11 @@
                   ]
                 }
               },
-              "required": [
-                "periodNumber",
-                "startTime",
-                "endTime"
-              ]
+              "required": ["periodNumber", "startTime", "endTime"]
             }
           }
         },
-        "required": [
-          "id",
-          "name",
-          "schedule"
-        ]
+        "required": ["id", "name", "schedule"]
       },
       "Individual": {
         "type": "object",
@@ -1029,11 +998,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "first",
-                  "middle",
-                  "last"
-                ]
+                "required": ["first", "middle", "last"]
               },
               {
                 "type": "null"
@@ -1041,12 +1006,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "fullName",
-          "email",
-          "name"
-        ]
+        "required": ["id", "fullName", "email", "name"]
       },
       "Individual_ByEmail": {
         "type": "object",
@@ -1084,11 +1044,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "first",
-                  "middle",
-                  "last"
-                ]
+                "required": ["first", "middle", "last"]
               },
               {
                 "type": "null"
@@ -1096,12 +1052,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "fullName",
-          "email",
-          "name"
-        ]
+        "required": ["id", "fullName", "email", "name"]
       },
       "Student_ByIndividual": {
         "type": "object",
@@ -1127,11 +1078,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "individualId",
-          "groupId"
-        ]
+        "required": ["id", "individualId", "groupId"]
       },
       "Administrator_ByIndividual": {
         "type": "object",
@@ -1146,10 +1093,7 @@
             "format": "uuid"
           }
         },
-        "required": [
-          "id",
-          "individualId"
-        ]
+        "required": ["id", "individualId"]
       },
       "Student": {
         "type": "object",
@@ -1182,11 +1126,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "individualId",
-          "groupId"
-        ]
+        "required": ["id", "individualId", "groupId"]
       },
       "Mark": {
         "title": "Mark",
@@ -1205,11 +1145,7 @@
                 "format": "uuid"
               }
             },
-            "required": [
-              "number",
-              "mark",
-              "controlTypeId"
-            ]
+            "required": ["number", "mark", "controlTypeId"]
           },
           {
             "type": "object",
@@ -1225,11 +1161,7 @@
                 "format": "uuid"
               }
             },
-            "required": [
-              "number",
-              "isPassed",
-              "controlTypeId"
-            ]
+            "required": ["number", "isPassed", "controlTypeId"]
           }
         ]
       },
@@ -1262,20 +1194,14 @@
             "properties": {
               "objectType": {
                 "type": "string",
-                "enum": [
-                  "discipline",
-                  "practiceKind"
-                ]
+                "enum": ["discipline", "practiceKind"]
               },
               "objectId": {
                 "type": "string",
                 "format": "uuid"
               }
             },
-            "required": [
-              "objectType",
-              "objectId"
-            ]
+            "required": ["objectType", "objectId"]
           },
           "workTypeId": {
             "anyOf": [
@@ -1363,12 +1289,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "title",
-          "shortTitle",
-          "fullTitle"
-        ]
+        "required": ["id", "title", "shortTitle", "fullTitle"]
       },
       "PracticeKind": {
         "type": "object",
@@ -1381,11 +1302,7 @@
           "practiceType": {
             "anyOf": [
               {
-                "enum": [
-                  "educational",
-                  "internship",
-                  "undergraduate"
-                ]
+                "enum": ["educational", "internship", "undergraduate"]
               },
               {
                 "type": "null"
@@ -1409,13 +1326,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "practiceType",
-          "title",
-          "shortTitle",
-          "fullTitle"
-        ]
+        "required": ["id", "practiceType", "title", "shortTitle", "fullTitle"]
       },
       "ControlType": {
         "type": "object",
@@ -1440,11 +1351,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "title",
-          "markTypeId"
-        ]
+        "required": ["id", "title", "markTypeId"]
       },
       "WorkType": {
         "type": "object",
@@ -1458,10 +1365,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "title"
-        ]
+        "required": ["id", "title"]
       },
       "Classroom": {
         "type": "object",
@@ -1477,11 +1381,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "id",
-          "title",
-          "number"
-        ]
+        "required": ["id", "title", "number"]
       },
       "Employee": {
         "type": "object",
@@ -1503,10 +1403,7 @@
             ]
           }
         },
-        "required": [
-          "id",
-          "individualId"
-        ]
+        "required": ["id", "individualId"]
       }
     }
   }
